tests/fail/duplicate_config.werk
config foo = "a"
config foo = "b"
